// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should display correctly for the list view 1`] = `
<Breadcrumbs
  backToFirst={false}
  component={
    Object {
      "key": "bar",
      "name": "Bar",
      "qualifier": "TRK",
    }
  }
  handleSelect={[Function]}
  rootComponent={
    Object {
      "key": "foo",
      "name": "Foo",
      "qualifier": "TRK",
    }
  }
/>
`;

exports[`should display only the root component 1`] = `
Object {
  "breadcrumbs": Array [
    Object {
      "key": "foo",
      "name": "Foo",
      "qualifier": "TRK",
    },
  ],
}
`;
